--- a/index.html
+++ b/index.html
@@ -463,8 +463,12 @@
 							<div class="card-tiled-list">						
 								<a class="tile" href="https://myanimelist.net/character/163811/Myne"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Myne_large.jpg" alt="Myne"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/111045/Anzu"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Anzu_large.jpg" alt="Anzu"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/174332/Maple"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maple_large.jpg" alt="Maple"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/169955/Emilico"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Emilico_large.jpg" alt="Emilico"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/159166/Catarina_Claes"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Catarina-Claes_large.jpg" alt="Catarina Claes"></img></a>															
+
+								<!--
+									<a class="tile" href="https://myanimelist.net/character/174332/Maple"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maple_large.jpg" alt="Maple"></img></a>
+								-->
 							</div>
 						</div><!---->		
 						<div class="tiled-list-card">					
@@ -530,17 +534,17 @@
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/fQwZ6bOW09k"><span class="OP_ED-anime">My Roommate is a Cat,</span><span class="OP_ED-title">"Unknown World" by Schrodinger's Cat adding Kotringo</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/tlrPO6dBaxw"><span class="OP_ED-anime">Sakura Quest,</span><span class="OP_ED-title">"Morning Glory" by (K)NoW_NAME</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/MN_WgwEmRaw"><span class="OP_ED-anime">Spice and Wolf,</span><span class="OP_ED-title">"Tabi no Tochuu" by Natsumi Kiyoura</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/-eYK3YP524A"><span class="OP_ED-anime">Soul Eater,</span><span class="OP_ED-title">"Papermoon" by Tommy Heavenly6</span></a></div>
 					</div><!--OPs-->
 					
 					<div class="favorite-item"><!--EDs-->
 						<h2 class="section-heading">Anime EDs</h2>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/j3SlUmr_T4g"><span class="OP_ED-anime">Blood Blockade Battlefront,</span><span class="OP_ED-title">"Sugar Song to Bitter Step" by Unison Square Garden</span></a></div>
-						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/-eYK3YP524A"><span class="OP_ED-anime">Soul Eater,</span><span class="OP_ED-title">"Papermoon" by Tommy Heavenly6</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/wwQGn-5A2HE"><span class="OP_ED-anime">Fire Force,</span><span class="OP_ED-title">"Veil" by Keina Suda</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/i8Yjk7KedVg"><span class="OP_ED-anime">Mob Psycho 100,</span><span class="OP_ED-title">"Refrain Boy" by Von ALL OFF</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/2bm2WmWiohw"><span class="OP_ED-anime">Kobayashi's Dragon Maid,</span><span class="OP_ED-title">"Hukan Communication" by Yuki Kuwahara</span></a></div>					
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/Gdt4h0ZobfI"><span class="OP_ED-anime">K-ON!,</span><span class="OP_ED-title">"Don't Say Lazy" by Sakurakou K-ON Bu</span></a></div>
 						<button onclick="more_OP_ED_item_ed_btn()" id="more_OP_ED_item_ed_btn" class="btn-pill-full-width">Show more</button>
-						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/Gdt4h0ZobfI"><span class="OP_ED-anime">K-ON!,</span><span class="OP_ED-title">"Don't Say Lazy" by Sakurakou K-ON Bu</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/6riDJMI-Y8U"><span class="OP_ED-anime">Jujutsu Kaisen,</span><span class="OP_ED-title">"Lost in Paradise" feat. AKLO by ALI</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/-rokG9XS37w"><span class="OP_ED-anime">Kaguya-sama: Love is War,</span><span class="OP_ED-title">"Chikatto Chika Chika♡"</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/o05UK9lXtC0"><span class="OP_ED-anime">Attack on Titan Season 3,</span><span class="OP_ED-title">"Requiem der Morgenröte" by Linked Horizon</span></a></div>
