--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@
 							<a class="tile" href="https://kitsu.io/anime/kaguya-sama-wa-kokurasetai-tensai-tachi-no-renai-zunousen-3"><img class="tile-image" src="https://media.kitsu.io/anime/43691/poster_image/large-739d3efd067cb2ae63a3aaece6987f03.jpeg" alt="Kaguya-sama: Love is War - Ultra Romantic"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/spy-x-family"><img class="tile-image" src="https://media.kitsu.io/anime/45398/poster_image/large-9447910ccd0f15954a33769b34c0ff9d.jpeg" alt="SPY x FAMILY"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/44229/poster_image/large-43d280867134345ce4ad5d9b985a54ca.jpeg" alt="The Quintessential Quintuplets Movie"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kawaii-dake-ja-nai-shikimori-san"><img class="tile-image" src="https://media.kitsu.io/anime/44159/poster_image/large-c7c3ffa72fbf7b84eb2a5988281af979.jpeg" alt="Shikimori's Not Just a Cutie"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tomodachi-game"><img class="tile-image" src="https://media.kitsu.io/anime/45401/poster_image/large-0850c0cfa153c42d890ac90b014b78b6.jpeg" alt="Tomodachi Game"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/gaikotsu-kishi-sama-tadaima-isekai-e-odekakechuu"><img class="tile-image" src="https://media.kitsu.io/anime/44423/poster_image/large-e7360f7c716f776a3734f170facf6552.jpeg" alt="Skeleton Knight in Another World"></img></a>
+							<!--
+								<a class="tile" href="https://kitsu.io/anime/yuusha-yamemasu"><img class="tile-image" src="https://media.kitsu.io/anime/45341/poster_image/large-fc835527eb5d210adc106d33f83fb083.jpeg" alt="I'm Quitting Heroing"></img></a>
+							-->
 						</div><!-- tiled-list -->
 						<h3 class="section-subheading">Summer 2022</h3> 
 						<div class="tiled-list scrolling-tiled-list">	
@@ -1104,7 +1110,7 @@
 					<a href="" id="footer_social-discord" class="footer-social-item"><i class="fab fa-discord"></i></a>										
 					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="footer_social-github"class="footer-social-item"><i class="fab fa-github"></i></a>
 				</div>
-				<p class="copyright">&copy; 2021, All right reserved</p>
+				<p class="copyright">&copy; 2022, All right reserved</p>
 			</div>
 			<!-- footer -->
 		</div><!--pagewrapper-->
