--- a/index.html
+++ b/index.html
@@ -174,9 +174,10 @@
 							<a class="tile" href="https://kitsu.io/anime/kawaii-dake-ja-nai-shikimori-san"><img class="tile-image" src="https://media.kitsu.io/anime/44159/poster_image/large-c7c3ffa72fbf7b84eb2a5988281af979.jpeg" alt="Shikimori's Not Just a Cutie"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tomodachi-game"><img class="tile-image" src="https://media.kitsu.io/anime/45401/poster_image/large-0850c0cfa153c42d890ac90b014b78b6.jpeg" alt="Tomodachi Game"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/gaikotsu-kishi-sama-tadaima-isekai-e-odekakechuu"><img class="tile-image" src="https://media.kitsu.io/anime/44423/poster_image/large-e7360f7c716f776a3734f170facf6552.jpeg" alt="Skeleton Knight in Another World"></img></a>
-							<!--
-								<a class="tile" href="https://kitsu.io/anime/yuusha-yamemasu"><img class="tile-image" src="https://media.kitsu.io/anime/45341/poster_image/large-fc835527eb5d210adc106d33f83fb083.jpeg" alt="I'm Quitting Heroing"></img></a>
-							-->
+							<a class="tile" href="https://kitsu.io/anime/yuusha-yamemasu"><img class="tile-image" src="https://media.kitsu.io/anime/45341/poster_image/large-fc835527eb5d210adc106d33f83fb083.jpeg" alt="I'm Quitting Heroing"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-reimeiki"><img class="tile-image" src="https://media.kitsu.io/anime/44511/poster_image/large-b15a4e213b68b05f9e980696015104f6.jpeg" alt="The Dawn of the Witch"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/otomege-sekai-wa-mob-ni-kibishii-sekai-desu"><img class="tile-image" src="https://media.kitsu.io/anime/45529/poster_image/large-269e2cfd3d011ac9f1c816fe6b2be358.jpeg" alt="Trapped in a Dating Sim: The World of Otome Games is Tough for Mobs"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kakkou-no-iinazuke"><img class="tile-image" src="https://media.kitsu.io/anime/44310/poster_image/large-59ca71bf57ad29baea920e368d5e69d3.jpeg" alt="A Couple of Cuckoos"></img></a>							
 						</div><!-- tiled-list -->
 						<h3 class="section-subheading">Summer 2022</h3> 
 						<div class="tiled-list scrolling-tiled-list">	
