--- a/index.html
+++ b/index.html
@@ -132,12 +132,11 @@
 						<h2 class="section-heading">Binge Watching</h2>
 						<h3 class="section-subheading">Backlog Bingeing</h3> 
 						<div class="tiled-list scrolling-tiled-list">																	
-							<a class="tile" href="https://kitsu.io/anime/nichijou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou "></img></a>
+							<a class="tile" href="https://kitsu.io/anime/nichijou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/chuunibyou-demo-koi-ga-shitai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7160/large.jpg?1597699260" alt="Love, Chunibyo & Other Delusions!"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/koi-wa-ameagari-no-you-ni"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13277/large.jpg?1597697509" alt="After the Rain"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/anohana-the-flower-we-saw-that-day"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/5981/large.jpg?1597696751" alt="Anohana: The Flower We Saw That Day"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shirobako"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/8698/large.jpg?1597696859" alt="Shirobako"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/sakurasou-no-pet-na-kanojo"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828" alt="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shirobako"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/8698/large.jpg?1597696859" alt="Shirobako"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/3-gatsu-no-lion"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/fruits-basket-2019"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41995/large.jpg?1597696876" alt="Fruits Basket"></img></a>																										
 							<a class="tile" href="https://kitsu.io/anime/shokugeki-no-souma-gou-no-sara"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42921/large.jpg" alt="Shokugeki no Souma: Gou no Sara"></img></a>
@@ -146,8 +145,7 @@
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
-						<div class="tiled-list scrolling-tiled-list">														
-							<a class="tile" href="https://kitsu.io/anime/hanyou-no-yasha-hime"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43180/large.jpg" alt="Yashahime: Princess Half-Demon"></img></a>														
+						<div class="tiled-list scrolling-tiled-list">																				
 							<a class="tile" href="https://kitsu.io/anime/kaguya-sama-wa-kokurasetai-tensai-tachi-no-renai-zunousen-3"><img class="tile-image" src="https://media.kitsu.io/anime/43691/poster_image/large-6fff692359faff490ba00d72fb48b9a3.jpeg" alt="Kaguya-sama: Love is War - Ultra Romantic"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/kawaii-dake-ja-nai-shikimori-san"><img class="tile-image" src="https://media.kitsu.io/anime/44159/poster_image/large-c7c3ffa72fbf7b84eb2a5988281af979.jpeg" alt="Shikimori's Not Just a Cutie"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/gaikotsu-kishi-sama-tadaima-isekai-e-odekakechuu"><img class="tile-image" src="https://media.kitsu.io/anime/44423/poster_image/large-e7360f7c716f776a3734f170facf6552.jpeg" alt="Skeleton Knight in Another World"></img></a>
@@ -169,7 +167,7 @@
 							<a class="tile" href="https://kitsu.io/anime/kanojo-okarishimasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/43588/poster_image/large-99901f4351c8436ef5420ea69a6cd091.jpeg" alt="Rent-a-Girlfriend 2nd Season"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/overlord-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44529/poster_image/large-d0683b94779e1ca0078b0dfde25443d7.jpeg" alt="Overlord IV"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-second-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42951/large.jpg" alt="Made in Abyss: The Sun Blazes Upon the Golden City"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shadows-house-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/45155/poster_image/large-a31aafee0f88d5d6a6e10046c5411b90.jpeg" alt="Shadows House 2nd Season"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shadows-house-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/45155/poster_image/large-761c07e52f68a41b92e8fe2aa0ea6667.jpeg" alt="Shadows House 2nd Season"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44031/poster_image/large-0432f3657198d815bd3b6a1a01d2f718.jpeg" alt="Is It Wrong to Try to Pick Up Girls in a Dungeon? IV"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/youkoso-jitsuryoku-shijou-shugi-no-kyoushitsu-e-zoku-hen"><img class="tile-image" src="https://media.kitsu.io/anime/45925/poster_image/large-d8e1034dc2df7b90bedb296dc22f2d7b.jpeg" alt="Classroom of the Elite 2"></img></a>
 						</div><!-- tiled-list -->
@@ -263,13 +261,21 @@
 						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Daily Life</h4>
 							<div class="card-tiled-list">						
+								<a class="tile" href="https://kitsu.io/anime/spy-x-family"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/spy-x-family_large.jpeg" alt="SPY x FAMILY"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/sakura-quest"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Sakura-Quest_large.jpg" alt="Sakura Quest"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/demi-chan-wa-kataritai"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Demi-chan_large.jpg" alt="Interviews With Monster Girls"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/yuru-camp"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Yuru-Camp_large.jpg" alt="Laid-Back Camp"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/flying-witch"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Flying-Witch_large.jpg" alt="Flying Witch"></img></a>
-								<!--<a class="tile" href="https://kitsu.io/anime/new-game"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11467/large.jpg?1459364811" alt="New Game!"></img></a>-->
+								<a class="tile" href="https://kitsu.io/anime/barakamon"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Barakamon_large.jpg" alt="Barakamon"></img></a>
 							</div>
 						</div><!--Daily Life-->
+						<div class="tiled-list-card">
+							<h4 class="tile-card-heading">Iyashikei</h4>
+							<div class="card-tiled-list">						
+								<a class="tile" href="https://kitsu.io/anime/yuru-camp"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Yuru-Camp_large.jpg" alt="Laid-Back Camp"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/flying-witch"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Flying-Witch_large.jpg" alt="Flying Witch"></img></a>							
+								<a class="tile" href="https://kitsu.io/anime/isekai-shokudou"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/isekai-shokudou_large.jpg" alt="Restaurant to Another World"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/doukyonin-wa-hiza-tokidoki-atama-no-ue"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/My-Roommate-is-a-Cat_large.jpg" alt="My Roommate is a Cat"></img></a>
+							</div>
+						</div><!--Daily Life-->						
 						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Drama</h4>
 							<div class="card-tiled-list">						
