--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->							
-							<a class="tile" href="https://kitsu.io/anime/spy-x-family"><img class="tile-image" src="https://media.kitsu.io/anime/45398/poster_image/large-c26c1e0b77e881fcd66475af6bd22c57.jpeg" alt="SPY x FAMILY"></img></a>				
 							<a class="tile" href="https://kitsu.io/anime/honzuki-no-gekokujou-shisho-ni-naru-tame-ni-wa-shudan-wo-erandeiraremasen-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/43607/poster_image/large-db18bd93dd3d498174d938526f07c153.jpeg" alt="Ascendance of a Bookworm 3rd Season"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/kanojo-okarishimasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/43588/poster_image/large-2be9442ddd7bd13ed91a0dfd35d2652f.jpeg" alt="Rent-a-Girlfriend 2nd Season"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -142,19 +142,17 @@
 							<a class="tile" href="https://kitsu.io/anime/shokugeki-no-souma-gou-no-sara"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42921/large.jpg" alt="Shokugeki no Souma: Gou no Sara"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/heike-monogatari"><img class="tile-image" src="https://media.kitsu.io/anime/45065/poster_image/large-b475fc55dafe220122603431bb731223.jpeg" alt="The Heike Story"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/ousama-ranking"><img class="tile-image" src="https://media.kitsu.io/anime/43849/poster_image/large-b836b0ea6db752c18cc8c9239f9a83c0.jpeg" alt="Ranking of Kings"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kaguya-sama-wa-kokurasetai-tensai-tachi-no-renai-zunousen-3"><img class="tile-image" src="https://media.kitsu.io/anime/43691/poster_image/large-6fff692359faff490ba00d72fb48b9a3.jpeg" alt="Kaguya-sama: Love is War - Ultra Romantic"></img></a>
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
-						<div class="tiled-list scrolling-tiled-list">																				
-							<a class="tile" href="https://kitsu.io/anime/kaguya-sama-wa-kokurasetai-tensai-tachi-no-renai-zunousen-3"><img class="tile-image" src="https://media.kitsu.io/anime/43691/poster_image/large-6fff692359faff490ba00d72fb48b9a3.jpeg" alt="Kaguya-sama: Love is War - Ultra Romantic"></img></a>							
+						<div class="tiled-list scrolling-tiled-list">																										
 							<a class="tile" href="https://kitsu.io/anime/kawaii-dake-ja-nai-shikimori-san"><img class="tile-image" src="https://media.kitsu.io/anime/44159/poster_image/large-c7c3ffa72fbf7b84eb2a5988281af979.jpeg" alt="Shikimori's Not Just a Cutie"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/gaikotsu-kishi-sama-tadaima-isekai-e-odekakechuu"><img class="tile-image" src="https://media.kitsu.io/anime/44423/poster_image/large-e7360f7c716f776a3734f170facf6552.jpeg" alt="Skeleton Knight in Another World"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-reimeiki"><img class="tile-image" src="https://media.kitsu.io/anime/44511/poster_image/large-b15a4e213b68b05f9e980696015104f6.jpeg" alt="The Dawn of the Witch"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/otomege-sekai-wa-mob-ni-kibishii-sekai-desu"><img class="tile-image" src="https://media.kitsu.io/anime/45529/poster_image/large-269e2cfd3d011ac9f1c816fe6b2be358.jpeg" alt="Trapped in a Dating Sim: The World of Otome Games is Tough for Mobs"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tate-no-yuusha-no-nariagari-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42530/large.jpg?1599926560" alt="The Rising of the Shield Hero 2"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/44229/poster_image/large-43d280867134345ce4ad5d9b985a54ca.jpeg" alt="The Quintessential Quintuplets Movie"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/yuusha-yamemasu"><img class="tile-image" src="https://media.kitsu.io/anime/45341/poster_image/large-fc835527eb5d210adc106d33f83fb083.jpeg" alt="I'm Quitting Heroing"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/kakkou-no-iinazuke"><img class="tile-image" src="https://media.kitsu.io/anime/44310/poster_image/large-59ca71bf57ad29baea920e368d5e69d3.jpeg" alt="A Couple of Cuckoos"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/tsuki-ga-michibiku-isekai-douchuu"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44297/large.jpg" alt="Tsukimichi -Moonlit Fantasy"></img></a>														
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 
@@ -163,21 +161,21 @@
 						<h3 class="section-subheading">Summer 2022</h3> 
 						<div class="tiled-list scrolling-tiled-list">	
 							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>																																											
-							<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44113/large.jpg?1615204263" alt=" The Devil is a Part-Timer! 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kanojo-okarishimasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/43588/poster_image/large-99901f4351c8436ef5420ea69a6cd091.jpeg" alt="Rent-a-Girlfriend 2nd Season"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/overlord-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44529/poster_image/large-d0683b94779e1ca0078b0dfde25443d7.jpeg" alt="Overlord IV"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-second-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42951/large.jpg" alt="Made in Abyss: The Sun Blazes Upon the Golden City"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44113/large.jpg?1615204263" alt=" The Devil is a Part-Timer! 2"></img></a>						
+							<a class="tile" href="https://kitsu.io/anime/overlord-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44529/poster_image/large-d0683b94779e1ca0078b0dfde25443d7.jpeg" alt="Overlord IV"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/shadows-house-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/45155/poster_image/large-761c07e52f68a41b92e8fe2aa0ea6667.jpeg" alt="Shadows House 2nd Season"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44031/poster_image/large-0432f3657198d815bd3b6a1a01d2f718.jpeg" alt="Is It Wrong to Try to Pick Up Girls in a Dungeon? IV"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/youkoso-jitsuryoku-shijou-shugi-no-kyoushitsu-e-zoku-hen"><img class="tile-image" src="https://media.kitsu.io/anime/45925/poster_image/large-d8e1034dc2df7b90bedb296dc22f2d7b.jpeg" alt="Classroom of the Elite 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/youkoso-jitsuryoku-shijou-shugi-no-kyoushitsu-e-zoku-hen"><img class="tile-image" src="https://media.kitsu.io/anime/45925/poster_image/large-77457d762ad53ee8121c5f3546b23228.jpeg" alt="Classroom of the Elite 2"></img></a>
 						</div><!-- tiled-list -->
 					
 						<h3 class="section-subheading">Later 2022</h3> 
 						<div class="tiled-list scrolling-tiled-list">																
 							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-6th-season"><img class="tile-image" src="https://media.kitsu.io/anime/45240/poster_image/large-2b0792a8225a20a7f24306616f0396b4.jpeg" alt="My Hero Academia 6"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-guren-no-kizuna"><img class="tile-image" src="https://media.kitsu.io/anime/45231/poster_image/large-a9e7286b315cb66a07b64b7566640df3.jpeg" alt="That Time I Got Reincarnated as a Slime: Scarlet Bonds"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-kuraki-yuuyami-no-scherzo"><img class="tile-image" src="https://media.kitsu.io/anime/45400/poster_image/large-857481b976baee3464dcf422d8cb955f.jpeg" alt="Sword Art Online the Movie -Progressive- Scherzo of Deep Night"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/bleach-sennen-kessen-hen"><img class="tile-image" src="https://media.kitsu.io/anime/43078/poster_image/large-6c34938bb11e2f6bbac3722644973a15.jpeg" alt="Bleach: Thousand-Year Blood War"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-guren-no-kizuna"><img class="tile-image" src="https://media.kitsu.io/anime/45231/poster_image/large-2f36407294ba9545dd39277b9b006b57.jpeg" alt="That Time I Got Reincarnated as a Slime: Scarlet Bonds"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-kuraki-yuuyami-no-scherzo"><img class="tile-image" src="https://media.kitsu.io/anime/45400/poster_image/large-4f7e5c2f5f11395aa2fa0ca4a201915b.jpeg" alt="Sword Art Online the Movie -Progressive- Scherzo of Deep Night"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/bleach-sennen-kessen-hen"><img class="tile-image" src="https://media.kitsu.io/anime/43078/poster_image/large-8f9174133bee5f4fb0b6d2be6a7f6465.jpeg" alt="Bleach: Thousand-Year Blood War"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/mob-psycho-100-iii"><img class="tile-image" src="https://media.kitsu.io/anime/45338/poster_image/large-b7ba28948da84b740c9ae7882b365fb9.jpeg" alt="Mob Psycho 100 III"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/spy-x-family-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/45619/poster_image/large-66977f7fc447cc0a4439c294c0143b4c.jpeg" alt="SPY x FAMILY Part 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/akuyaku-reijou-nanode-last-boss-wo-kattemimashita"><img class="tile-image" src="https://media.kitsu.io/anime/45269/poster_image/large-e4e4d895cec7e20978250f3dfc3afc2c.jpeg" alt="I'm the Villainess, So I'm Taming the Final Boss"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/fairy-tail-100-years-quest"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45159/large.jpg" alt="Fairy Tail: 100 Years Quest"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45229/poster_image/large-74ba8c0cdf6d6c08d4303e4aaa1eed36.jpeg" alt="The Duke of Death and His Maid Season 2"></img></a>
@@ -185,10 +183,13 @@
 						</div><!-- tiled-list -->
 						<h3 class="section-subheading">Year 2023</h3> 
 						<div class="tiled-list scrolling-tiled-list">																																					
-							<a class="tile" href="https://kitsu.io/anime/otome-game-no-hametsu-flag-shika-nai-akuyaku-reijou-ni-tensei-shiteshimatta-movie"><img class="tile-image" src="https://media.kitsu.io/anime/45213/poster_image/large-4a6caf4d478bd435ea34b60393c32dc2.jpeg" alt="My Next Life as a Villainess: All Routes Lead to Doom! Movie"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/black-clover-movie"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44242/large.jpg" alt="Black Clover Movie"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/solo-leveling"><img class="tile-image" src="https://media.kitsu.io/anime/46231/poster_image/large-ccc9ca358cc3dd829a1aadf614ca2f15.jpeg" alt="Solo Leveling"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/vinland-saga-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/44875/poster_image/large-e9266eb09dc31f410ff9aeebfc3a18b7.jpeg" alt="Vinland Saga Season 2"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/shingeki-no-kyojin-the-final-season-part-3"><img class="tile-image" src="https://media.kitsu.io/anime/46038/poster_image/large-cbba329d2170ae0e6bf93a7a06c49d8f.jpeg" alt="Attack on Titan: The Final Season Part 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/dr-stone-three"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44289/large.jpg" alt="Dr. Stone Season 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/youkoso-jitsuryoku-shijou-shugi-no-kyoushitsu-e-3"><img class="tile-image" src="https://media.kitsu.io/anime/45951/poster_image/large-a2c36c9f17c27f46b420fc9ced736d29.jpeg" alt="Classroom of the Elite 3"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/otome-game-no-hametsu-flag-shika-nai-akuyaku-reijou-ni-tensei-shiteshimatta-movie"><img class="tile-image" src="https://media.kitsu.io/anime/45213/poster_image/large-4a6caf4d478bd435ea34b60393c32dc2.jpeg" alt="My Next Life as a Villainess: All Routes Lead to Doom! Movie"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Most Anticipated -->
 				
